# fuck-yo-encryption

./: CONTRIBUTING.md  LICENSE  README.md  __init__.py  noise.py  pyproject.toml  setup.py
fuckyou_crypto/: __init__.py  core.py  encoder.py
fuckyou_crypto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
